Remove MapBuilder and replace with Map#of